Refactor code structure for improved readability and maintainability

--- a/mta.yaml
+++ b/mta.yaml
@@ -27,6 +27,15 @@ modules:
       - name: Franco-Proxy-auth
       - name: Franco-Proxy-connectivity
       - name: Franco-Proxy-destination
+      - name: Franco-Proxy-db
+
+  - name: Franco-Proxy-db-deployer
+    type: hdb
+    path: gen/db
+    parameters:
+      buildpack: nodejs_buildpack
+    requires:
+      - name: Franco-Proxy-db
 
 resources:
   - name: Franco-Proxy-auth
@@ -48,3 +57,8 @@ resources:
     parameters:
       service: destination
       service-plan: lite
+  - name: Franco-Proxy-db
+    type: com.sap.xs.hdi-container
+    parameters:
+      service: hana
+      service-plan: hdi-shared
