--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@sap-cloud-sdk/http-client": "^4.0.2",
+    "@sap-cloud-sdk/resilience": "^4.0.2",
     "@sap/cds": "^8",
-    "express": "^4",
-    "@sap/xssec": "^4"
+    "@sap/xssec": "^4",
+    "express": "^4"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.9.0",
@@ -21,7 +23,9 @@
   },
   "cds": {
     "requires": {
-      "auth": "mocked",
+      "[development]": {
+        "auth": "mocked"
+      },
       "[production]": {
         "auth": "xsuaa"
       },
@@ -30,11 +34,7 @@
       "PurchaseContracts": {
         "kind": "odata-v2",
         "model": "srv/external/PurchaseContracts",
-        "[production]": {
-          "credentials": {
-            "path": "s4hanacloud/sap/opu/odata/sap/API_PURCHASECONTRACT_PROCESS_SRV;v=0002"
-          }
-        },
+
         "csrf": true,
         "csrfInBatch": true
       }
